--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 fastapi[standard]
 uvicorn
 pydantic-settings
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+sqlalchemy
+httpx
+psycopg2-binary
