이벤트 정보 구현

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-fastapi[standard]
-uvicorn
-pydantic-settings
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
+fastapi
+uvicorn[standard]
 sqlalchemy
 alembic
-httpx
-psycopg2-binary
-python-dotenv
-psutil
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-fastapi-mail
+pydantic
+python-jose[cryptography]
+passlib[bcrypt]
 requests
-bcrypt==3.2.2
+httpx
+python-multipart
+psycopg2-binary
+gunicorn
