--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,python,dotenv,venv,git
+logs/
