feat(email_verification): 이메일 인증 기능 추가 및 환경 변수 설정
- .env.example 파일에 이메일 인증 관련 환경 변수 추가
- 이메일 인증 활성화 여부를 설정하는 config_email_verification.py 파일 생성
- 사용자 등록 시 이메일 인증 확인 로직을 환경 설정에 따라 조정하여 비활성화 가능하도록 변경

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,31 @@
-# Database
+# Weather Flick Backend 환경 변수 예제
+
+# 데이터베이스 설정
 DATABASE_URL=postgresql://username:password@localhost:5432/weather_flick
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=your_password
-DB_NAME=weather_flick
-DB_PORT=5432
 
-# API Keys
-KTO_API_KEY=your_kto_api_key
-KMA_API_KEY=your_kma_api_key
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-WEATHER_API_KEY=your_weather_api_key
-OPENAI_API_KEY=your_openai_api_key
-
-# JWT
-SECRET_KEY=your_secret_key
+# JWT 설정
+JWT_SECRET_KEY=your-secret-key-here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+# 환경 설정
+ENVIRONMENT=development  # development, staging, production
 
-# Redis (캐싱)
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
+# 이메일 인증 설정
+EMAIL_VERIFICATION_ENABLED=false  # 개발 환경에서는 false로 설정 가능
 
-# Email
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=your_email_password
-MAIL_FROM=your_email@gmail.com
-MAIL_PORT=587
+# Redis 설정 (선택사항)
+REDIS_URL=redis://localhost:6379
+
+# 이메일 서비스 설정 (이메일 인증 사용 시 필요)
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM=noreply@weatherflick.com
 MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
 
-# Environment
-ENVIRONMENT=development
-DEBUG=True
+# 외부 API 키
+WEATHER_API_KEY=
+KMA_API_KEY=
+KAKAO_API_KEY=
+GOOGLE_API_KEY=
+KOREA_TOURISM_API_KEY=
