--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-alembic
-pydantic
-python-jose[cryptography]
-passlib[bcrypt]
-requests
+fastapi==0.111.0
+uvicorn[standard]==0.30.6
+sqlalchemy==2.0.31
+alembic==1.13.2
+pydantic==2.8.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+requests==2.32.3
 httpx==0.24.1
-python-multipart
-psycopg2-binary
-gunicorn
-pydantic-settings
-fastapi-mail
-google-auth
-google-auth-oauthlib
-python-dotenv
-python-json-logger
+python-multipart==0.0.9
+psycopg2-binary==2.9.9
+gunicorn==22.0.0
+pydantic-settings==2.3.4
+fastapi-mail==1.4.1
+google-auth==2.32.0
+google-auth-oauthlib==1.2.1
+python-dotenv==1.0.1
+python-json-logger==2.0.7
 openai==1.35.0
 redis>=4.5.0
 
