--- a/.gitignore
+++ b/.gitignore
@@ -294,3 +294,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,python,dotenv,venv,git
 logs/**/*
+
+config/firebase-service-account.json
