feat(env): .env.example 파일 업데이트 및 API 설정 추가
- .env.example 파일에 다양한 API 설정 및 환경 변수를 추가하여 개발 환경 구성의 편의성을 높였습니다.
- 데이터베이스, CORS, JWT, 이메일, 외부 API 키 등 다양한 설정을 명확히 구분하여 문서화했습니다.
- 각 API에 대한 키와 URL을 추가하여 개발자가 쉽게 사용할 수 있도록 개선했습니다.

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,97 @@
-# Weather Flick Backend 환경 변수 예제
+# Weather Flick Backend 환경 변수 예시
+# 이 파일을 .env로 복사하고 실제 값으로 수정하세요
+
+# 보안 설정
+SECRET_KEY=your-secret-key-here-use-openssl-rand-base64-32
 
 # 데이터베이스 설정
-DATABASE_URL=postgresql://username:password@localhost:5432/weather_flick
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=your_db_user
+DATABASE_PASSWORD=your_db_password
+DATABASE_NAME=weather_flick
+DATABASE_URL=postgresql://your_db_user:your_db_password@localhost:5432/weather_flick
+
+# 서버 설정
+APP_NAME=Weather Flick API
+APP_VERSION=1.0.0
+DEBUG=false
+HOST=0.0.0.0
+PORT=8000
+
+# CORS 설정
+CORS_ORIGINS=["http://localhost:5173","http://localhost:8000"]
 
 # JWT 설정
-JWT_SECRET_KEY=your-secret-key-here
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# 환경 설정
-ENVIRONMENT=development  # development, staging, production
+# 날씨 API 설정
+# WeatherAPI.com (현재 사용 중, 2025-01-19 만료 예정)
+WEATHER_API_KEY=your_weatherapi_key_here
+WEATHER_API_URL=http://api.weatherapi.com/v1
 
-# 이메일 인증 설정
-EMAIL_VERIFICATION_ENABLED=false  # 개발 환경에서는 false로 설정 가능
+# 기상청 API 설정
+KMA_API_KEY=your_kma_api_key_here
 
-# Redis 설정 (선택사항)
-REDIS_URL=redis://localhost:6379
+# 카카오 API 설정
+KAKAO_API_KEY=your_kakao_api_key_here
+KAKAO_API_URL=https://dapi.kakao.com/v2/local
+KAKAO_LOCAL_API_KEY=your_kakao_local_api_key_here
+KAKAO_MOBILITY_API_KEY=your_kakao_mobility_api_key_here
 
-# 이메일 서비스 설정 (이메일 인증 사용 시 필요)
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
-MAIL_FROM=noreply@weatherflick.com
+# 네이버 API 설정
+NAVER_CLIENT_ID=your_naver_client_id
+NAVER_CLIENT_SECRET=your_naver_client_secret
+NAVER_API_URL=https://openapi.naver.com/v1
+
+# 구글 API 설정
+GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_PLACES_URL=https://maps.googleapis.com/maps/api/place
+
+# 구글 OAuth 설정
+google_client_id=your_google_client_id_here
+google_client_secret=your_google_client_secret_here
+google_redirect_uri=http://localhost:8000/api/auth/google/callback
+frontend_url=http://localhost:5173
+
+# 한국관광공사 API 설정
+KOREA_TOURISM_API_KEY=your_korea_tourism_api_key_here
+KOREA_TOURISM_API_URL=http://api.visitkorea.or.kr/openapi/service/rest/KorService
+
+# 이메일 설정 (Gmail 예시)
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password-here
+MAIL_FROM=noreply@weatherflick.com
+MAIL_FROM_NAME=Weather Flick
+MAIL_STARTTLS=true
+MAIL_SSL_TLS=false
 
-# 외부 API 키
-WEATHER_API_KEY=
-KMA_API_KEY=
-KAKAO_API_KEY=
-GOOGLE_API_KEY=
-KOREA_TOURISM_API_KEY=
+# OpenAI API 설정 (선택사항)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Redis 설정
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# 교통 API 설정
+ODsay_API_KEY=your_odsay_api_key_here
+
+# TMAP API 설정 (2025-06-30 만료 예정)
+TMAP_API_KEY=your_tmap_api_key_here
+
+# Firebase Cloud Messaging (선택사항)
+FCM_SERVER_KEY=your_fcm_server_key_here
+
+# URL 설정
+BACKEND_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
+
+# 외부 API URL 설정
+GOOGLE_OAUTH_USERINFO_URL=https://www.googleapis.com/oauth2/v2/userinfo
+GOOGLE_OAUTH_TOKEN_URL=https://oauth2.googleapis.com/token
+NAVER_SEARCH_LOCAL_URL=https://openapi.naver.com/v1/search/local.json
