feat(travel): 여행 계획 공유 및 협업 기능 추가
- 여행 계획 공유를 위한 `travel_plan_shares` 테이블과 관련 API 엔드포인트를 추가했습니다.
- 사용자 간의 협업을 위한 `travel_plan_collaborators` 테이블을 생성하고, 권한 관리 기능을 구현했습니다.
- 실시간 정보 및 경로 최적화 기능을 통합하여 사용자 경험을 향상시켰습니다.
- 기존의 KMA 날씨 API 및 네이버 지도 API 관련 코드를 제거하고, 새로운 추천 시스템을 도입했습니다.
- 다양한 AI 추천 서비스와 사용자 행동 추적 기능을 추가하여 개인화된 여행 경험을 제공합니다.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydantic==2.8.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.32.3
-httpx==0.24.1
+httpx>=0.28.1
 python-multipart==0.0.9
 psycopg2-binary==2.9.9
 gunicorn==22.0.0
@@ -16,7 +16,7 @@ google-auth==2.32.0
 google-auth-oauthlib==1.2.1
 python-dotenv==1.0.1
 python-json-logger==2.0.7
-openai==1.35.0
+openai>=1.97.0
 redis>=4.5.0
 aiohttp==3.12.14
 firebase-admin==6.5.0
